| Bug #24497 | Valgrind warning: get_one_option | ||
|---|---|---|---|
| Submitted: | 22 Nov 2006 10:25 | Modified: | 10 Dec 2006 7:04 |
| Reporter: | Lars Thalmann | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Michael Widenius | CPU Architecture: | Any |
[29 Nov 2006 20:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/16154 ChangeSet@1.2373, 2006-11-29 22:51:09+02:00, monty@mysql.com +110 -0 Added back sql-bench directory, so that one can more easily run benchmarks on a server and add new benchmarks for new optimizations Fixed memory leak in _db_set() (Bug#24497 Valgrind warning: get_one_option) Don't call net_clear() on COM_QUIT. This avoids a warning from net_clear() after shutdown: "skipped ## bytes from file" BUG#21428: skipped 9 bytes from file: socket (3)" on "mysqladmin shutdown"
[10 Dec 2006 7:04]
Jon Stephens
No user-visible changes; no further action required.

Description: VALGRIND: '55 bytes in 1 blocks are still reachable in loss record 3 of 8' COUNT: 1 FUNCTION: malloc FILES: master.err TESTS: flush_read_lock_kill STACK: at 0x4904B05: malloc (vg_replace_malloc.c:149) by 0x9B5DB1: ListAdd (dbug.c:1971) by 0x9B6C8E: _db_set_ (dbug.c:524) by 0x9B6EC3: _db_set_init_ (dbug.c:718) by 0x60A112: get_one_option(int, my_option const*, char*) (mysqld.cc:7154) by 0x9A96DF: handle_options (my_getopt.c:487) by 0x60BA3C: get_options(int, char**) (mysqld.cc:7770) by 0x60CAAA: init_common_variables(char const*, int, char**, char const**) (mysqld.cc:2645) by 0x60D201: main (mysqld.cc:3501) VALGRIND: '55 bytes in 1 blocks are definitely lost in loss record 4 of 8' COUNT: 1 FUNCTION: malloc FILES: master.err TESTS: flush_read_lock_kill STACK: at 0x4904B05: malloc (vg_replace_malloc.c:149) by 0x9B5DB1: ListAdd (dbug.c:1971) by 0x9B6C8E: _db_set_ (dbug.c:524) by 0x60A0FF: get_one_option(int, my_option const*, char*) (mysqld.cc:7153) by 0x9A96DF: handle_options (my_getopt.c:487) by 0x60BA3C: get_options(int, char**) (mysqld.cc:7770) by 0x60CAAA: init_common_variables(char const*, int, char**, char const**) (mysqld.cc:2645) by 0x60D201: main (mysqld.cc:3501) How to repeat: Pushbuild