scripts/make_binary_distribution.sh
@@ -97,7 +97,7 @@ mkdir $BASE $BASE/bin $BASE/docs \
  $BASE/mysql-test/extra/binlog_tests $BASE/mysql-test/extra/rpl_tests
 
 if [ $BASE_SYSTEM != "netware" ] ; then
- mkdir $BASE/share/mysql $BASE/tests $BASE/man \
+ mkdir $BASE/share/mysql $BASE/tests $BASE/sql-bench $BASE/man \
   $BASE/man/man1 $BASE/man/man8 $BASE/data $BASE/data/mysql $BASE/data/test
 
  chmod o-rwx $BASE/data $BASE/data/*
@@ -275,7 +275,8 @@ if [ $BASE_SYSTEM != "netware" ] ; then
   mv $BASE/support-files/binary-configure $BASE/configure
   chmod a+x $BASE/bin/* $BASE/scripts/* $BASE/support-files/mysql-* \
       $BASE/support-files/mysql.server $BASE/configure
-  rm -f $BASE/lib/*.la
+  $CP -r sql-bench/* $BASE/sql-bench
+  rm -f $BASE/sql-bench/*.sh $BASE/sql-bench/Makefile* $BASE/lib/*.la
   rm -f $BASE/bin/*.sql
 fi
 
@@ -320,6 +321,7 @@ fi
 # Clean up if we did this from a bk tree
 if [ -d $BASE/share/SCCS ] ; then
   find $BASE/share -name SCCS -print | xargs rm -rf
+  find $BASE/sql-bench -name SCCS -print | xargs rm -rf
 fi
 
 # NDB Cluster
